# drift_engine

./: .dockerignore  .env.example  .gitignore  .woodpecker.yml  Dockerfile  README.md  TODO.md  docker-compose.ci.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: alembic.ini  env.py
alembic/versions/: 0001_initial.py  0002_operational_tables.py  0003_remediation_idempotency.py
config/: __init__.py  logging_config.py  settings.py
docs/: ci-cd.md  production.md  rollback.md
drift_engine/: __init__.py  main.py
drift_engine/api/: app.py  composition.py  dependencies.py  security.py
drift_engine/api/middleware/: auth.py  correlation.py  error_handler.py  rate_limit.py
drift_engine/api/routes/: audit.py  baselines.py  collectors.py  drifts.py  health.py  integrations.py  jobs.py  policies.py  remediation.py  ui.py
drift_engine/api/schemas/: baseline.py  common.py  drift.py  integration.py  jobs.py  policy.py
drift_engine/cli/: commands.py
drift_engine/collectors/: __init__.py  base.py  file_collector.py  kubernetes_collector.py  network_collector.py  package_collector.py  registry.py  service_collector.py  user_collector.py
drift_engine/collectors/cloud/: __init__.py  aws_collector.py  azure_collector.py
drift_engine/core/: __init__.py  baseline.py  drift_detector.py  engine.py  exceptions.py  models.py  operations.py  scheduler.py  state_manager.py
drift_engine/events/: __init__.py  bus.py  handlers.py  models.py  notifications.py
drift_engine/integrations/: __init__.py  kubernetes.py  models.py  registry.py
drift_engine/policies/: __init__.py  engine.py  evaluator.py  models.py  rules.py
drift_engine/remediation/: __init__.py  actions.py  approval.py  engine.py  strategies.py
drift_engine/storage/: __init__.py  base.py  elasticsearch_store.py  postgres.py  redis_cache.py  unit_of_work.py
drift_engine/telemetry/: metrics.py  tracing.py
drift_engine/utils/: circuit_breaker.py  concurrency.py  crypto.py  retry.py  serialization.py
examples/kubernetes/: baseline.yaml  drift.yaml
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  api.ts  styles.css  types.ts
frontend/src/components/: Badge.tsx  Button.tsx  Card.tsx  EmptyState.tsx
frontend/src/components/dashboard/: IncidentSpotlight.tsx  PostureSummary.tsx  PriorityQueue.tsx  QuickActions.tsx  Tables.tsx  TopStatusBar.tsx  shared.ts
scripts/: ci_api_smoke.py
tests/: conftest.py  factories.py
tests/integration/: test_api_integration.py  test_engine_integration.py  test_storage_persistence.py
tests/unit/: test_baseline.py  test_collectors.py  test_drift_detector.py  test_policy_engine.py
